crates/ruff_python_parser/tests/snapshots/invalid_syntax@t_string_empty_expression.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/t_string_empty_expression.py
---
## AST

```
Module(
    ModModule {
        range: 0..60,
        body: [
            Expr(
                StmtExpr {
                    range: 46..51,
                    value: TString(
                        ExprTString {
                            range: 46..51,
                            value: TStringValue {
                                inner: Single(
                                    TString(
                                        TString {
                                            range: 46..51,
                                            elements: [
                                                Interpolation(
                                                    TStringInterpolationElement {
                                                        range: 48..50,
                                                        interpolation: Name(
                                                            ExprName {
                                                                range: 49..49,
                                                                id: Name(""),
                                                                ctx: Invalid,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: TStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 52..59,
                    value: TString(
                        ExprTString {
                            range: 52..59,
                            value: TStringValue {
                                inner: Single(
                                    TString(
                                        TString {
                                            range: 52..59,
                                            elements: [
                                                Interpolation(
                                                    TStringInterpolationElement {
                                                        range: 54..58,
                                                        interpolation: Name(
                                                            ExprName {
                                                                range: 55..55,
                                                                id: Name(""),
                                                                ctx: Invalid,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: TStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # parse_options: { "target-version": "3.14" }
2 | t"{}"
  |    ^ Syntax Error: Expected an expression
3 | t"{  }"
  |


  |
1 | # parse_options: { "target-version": "3.14" }
2 | t"{}"
3 | t"{  }"
  |      ^ Syntax Error: Expected an expression
  |
